--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
       <h1>All Topics</h1>
     </div>
     <div class="col-sm-6 text-right">
-      <a href="{url_for('topic_add')}"><button class="btn default">New Topic +</button></a>
+      <a href="{{url_for('topic_add')}}"><button class="btn default">New Topic +</button></a>
     </div>
     <div class="col-sm-12">
         <div class="well">
