--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,5 +102,23 @@
 
   </div>
 </div>
+
+</div>
+
+<div class="container">
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+
+             <div class="col-lg-12 text-center">
+                    <h4>Done by: Wafa Basoodan</h4>
+              </div>
+            </div>
+
+        </footer>
+      </div>
 </body>
 </html>
