--- a/app/static/style.css
+++ b/app/static/style.css
@@ -9,9 +9,13 @@
 
     /* Set black background color, white text and some padding */
     footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
+      position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
     }
 
     /* On small screens, set height to 'auto' for sidenav and grid */
