--- a/app/templates/topic_add.html
+++ b/app/templates/topic_add.html
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                     <td><label for = "content"> Content : </label> </td>
-                    <td> <textarea  name = "content" rows = "6" cols = "100"> </textarea> </td>
+                    <td> <textarea  name = "content" rows = "6" cols = "50"> </textarea> </td>
                 </tr>
                 <tr>
                     <td>  </td>
@@ -91,5 +91,21 @@
 </div>
   </div>
     </div>
+
+<div class="container">
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+
+             <div class="col-lg-12 text-center">
+                    <h4> Done by: Wafa Basoodan </h4>
+              </div>
+            </div>
+
+        </footer>
+      </div>
 </body>
 </html>
