--- a/app/templates/topic_update.html
+++ b/app/templates/topic_update.html
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                     <td><label for = "content"> Content : </label> </td>
-                    <td> <textarea  name = "content" rows = "6" cols = "50"> {{post.contente}} </textarea> </td>
+                    <td> <textarea  name = "content" rows = "6" cols = "50"> {{post.content}} </textarea> </td>
                 </tr>
                 <tr>
                     <td>  </td>
