fix content spilling mistake

--- a/app/templates/topic_show.html
+++ b/app/templates/topic_show.html
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                     <td><label for = "content"> Content : </label> </td>
-                    <td> <textarea  name = "content" rows = "6" cols = "50"> {{post.contente}} </textarea> </td>
+                    <td> <textarea  name = "content" rows = "6" cols = "50"> {{post.content}} </textarea> </td>
                 </tr>
 
             </table>
