Add ajax POST request

--- a/app/templates/topic_add.html
+++ b/app/templates/topic_add.html
@@ -109,3 +109,39 @@
       </div>
 </body>
 </html>
+
+<script
+   src="https://code.jquery.com/jquery-3.3.1.min.js"
+   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+   crossorigin="anonymous"></script>
+ <script>
+    $(function ()
+    {
+        $("form").submit(function (event)
+        {
+            event.preventDefault();
+            var topicTitle = $("input[name='title']").val();
+            var topicContent = $("teatarea[name='content']").val();
+            var topicData = {
+                "title": topicTitle,
+                "content": topicContent
+                };
+            $.ajax({
+                type: "POST",
+                url: "/api/topic/add",
+                data: JSON.stringify(topicData),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response)
+                    {
+                        alert("Added topic successfully !");
+                        window.location.href = '/';
+                    }
+                });
+
+
+        });
+    });
+
+
+</script>
