Fix ajax POST request

--- a/app/templates/topic_add.html
+++ b/app/templates/topic_add.html
@@ -121,7 +121,8 @@
         {
             event.preventDefault();
             var topicTitle = $("input[name='title']").val();
-            var topicContent = $("teatarea[name='content']").val();
+            var topicContent = $("textarea[name='content']").val();
+
             var topicData = {
                 "title": topicTitle,
                 "content": topicContent
