--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -127,28 +127,4 @@
    src="https://code.jquery.com/jquery-3.3.1.min.js"
    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
    crossorigin="anonymous"></script>
- <script>
-    $(function ()
-    {
-        $(".delete").submit(function (event)
-        {
-            var id = event.target.id;
-            alert("id = "+id);
-                };
-            $.ajax({
-                type: "DELETE",
-                url: "/api/topic/delete" + id,
-                dataType: "json",
-                success: function (response)
-                    {
-                        alert("Delete topic successfully !");
-                        window.location.href = '/';
-                    }
-                });
-
-
-        });
-    });
-
-
-</script>
+<script src="/static/js/delete_topic.js"></script>
